--- a/index.html
+++ b/index.html
@@ -10,9 +10,26 @@
 <title> Caitlin Lee | Contact Page </title>
 <link rel="stylesheet" type="text/css" href="styles-contact.css">
 <link rel="stylesheet" type="text/css" href="https://use.typekit.net/rjv7ixl.css">
+<style>
+    body{
+        animation: fadeInAnimation ease 3s;
+        animation-iteration-count: 1;
+        animation-fill-mode: forwards;
+    }
+    @keyframes fadeInAnimation {
+        0% {
+            opacity: 0;
+        }
+        100% {
+            opacity: 1;
+        }
+    }
+</style>
 </head>
 
+
 <body>
+
 
 <div class ="center">
     <img id="logo" src="images/caitlinleelogorevised@2x.png" alt="caitlinleelogorevised"
@@ -23,7 +40,7 @@ width="600">
 <nav>
     <ul>
         <li><a href="https://www.behance.net/caitlinlee6"> My Work </a></li>
-        <li><a href="www.linkedin.com/in/caitlin-lee-1a0480264"> LinkedIn </a></li>
+        <li><a href="https://www.linkedin.com/in/caitlin-lee-1a0480264"> LinkedIn </a></li>
         <li><a href="mailto:caitlinjhlee@gmail.com"> Email Me </a></li>
     </ul>
 </nav>   
