--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
 
 <div class ="center">
     <img id="logo" src="images/caitlinleelogorevised@2x.png" alt="caitlinleelogorevised"
-width="600">
+width="500">
     <h1>Let's get in touch!</h1>
     <h2>I would love to connect with you</h2>
     <p>Please contact me through one of the links below.</p> 
 <nav>
     <ul>
-        <li><a href="https://www.behance.net/caitlinlee6"> My Work </a></li>
-        <li><a href="https://www.linkedin.com/in/caitlin-lee-1a0480264"> LinkedIn </a></li>
+        <li><a href="https://www.behance.net/caitlinlee6" target="_blank"> My Work </a></li>
+        <li><a href="https://www.linkedin.com/in/caitlin-lee-1a0480264" target="_blank"> LinkedIn </a></li>
         <li><a href="mailto:caitlinjhlee@gmail.com"> Email Me </a></li>
     </ul>
 </nav>   
